<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/menu_pause"
		app:showAsAction="ifRoom"
		android:title="@string/menu_pause_item"
		android:visible="true">
	</item>
	<item
		android:id="@+id/menu_resume"
		app:showAsAction="ifRoom"
		android:title="@string/menu_resume_item"
		android:visible="true">
	</item>
	<item
   		android:id="@+id/menu_delete"
        app:showAsAction="ifRoom"
     	android:title="@string/menu_delete" 
     	android:visible="true">
    </item>

	<item 
   		android:id="@+id/menu_reset"
        app:showAsAction="always"
     	android:title="@string/menu_reset" 
     	android:visible="true">
    </item>

	<item
		android:id="@+id/menu_refresh_drm"
		app:showAsAction="always"
		android:title="@string/menu_refresh_drm"
		android:visible="true">
	</item>
</menu>
