<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="6dip">

	<LinearLayout
		android:id="@+id/device_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/device_id"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/padding_small"/>
    		<TextView
	    		android:id="@+id/deviceId"
		    	android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/device_nickname"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/padding_small"/>
            <TextView
                android:id="@+id/deviceNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/current_device"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/padding_small"
                />
            <TextView
                android:id="@+id/currentDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/device_last_sync"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/padding_small"
                />
            <TextView
                android:id="@+id/lastSync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/device_last_modified"
                android:textStyle="bold"
                android:layout_marginRight="@dimen/padding_small"
                />
            <TextView
                android:id="@+id/lastModified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
	</LinearLayout>


	<LinearLayout
		android:id="@+id/device_options"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<!-- Change nickname -->
		<Button
			android:id="@+id/btnChangeNickname"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_weight="1"
			android:text="@string/change_nickname"
			style="@style/Widget.AppCompat.Button.Colored"/>

		<!--  Enable disable download -->
		<Button
			android:id="@+id/btnEnableDisable"
			android:layout_width="fill_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_vertical"
			android:layout_weight="1"
			android:text="@string/enable"
			style="@style/Widget.AppCompat.Button.Colored"/>

		<!--  Deregister -->
		<Button
			android:id="@+id/btnDeregister"
			android:layout_width="fill_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_vertical"
			android:layout_weight="1"
			android:text="@string/unregister"
			style="@style/Widget.AppCompat.Button.Colored"/>

	</LinearLayout>
</LinearLayout>