<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_enabled"
                style="@style/SettingsHeading"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/downloadEnabledText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/btnEnableDisable"
                    android:text="@string/enable"
                    style="@style/SettingsButton"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_storage"
                style="@style/SettingsHeading"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/maxstorage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberSigned" />

                <Button
                    android:id="@+id/btnMaxstorageReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headroom"
                style="@style/SettingsHeading"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/headroom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btnHeadroomReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton"/>

            </LinearLayout>

            <!-- Errored Segments -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_segment_errors"
                style="@style/SettingsHeading"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/maxSegmentErrors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_segment_code"
                style="@style/SettingsHeading"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/proxySegmentErrorCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/batteryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_threshold"
                style="@style/SettingsHeading"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <SeekBar
                    android:id="@+id/battery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    />

                <Button
                    android:id="@+id/btnBatteryReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_path"
                style="@style/SettingsHeading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/destinationPath"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                     />

                <Button
                    android:id="@+id/btnDestinationReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cell_quota"
                style="@style/SettingsHeading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/cellquota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btnCellquotaReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cell_quota_start_date"
                style="@style/SettingsHeading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/cellquotaStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnCellquotaDateReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <!-- Fragment Progress Rate -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_progress_rate"
                style="@style/SettingsHeading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/fragmentProgressRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/btnFragmentProgressRateReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <!-- Progress configuration -->

            <TextView
                android:id="@+id/progressPercentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_progress_setting"
                style="@style/SettingsHeading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <SeekBar
                    android:id="@+id/progressPercentBar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"
                    />

                <Button
                    android:id="@+id/btnProgressPercentReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_timed"
                style="@style/SettingsHeading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/progressTimed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/btnProgressTimedReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <!-- Connection Timeout -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_timeout"
                style="@style/SettingsHeading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/connectionTimeout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/btnConnectionTimeoutReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <!-- Socket Timeout -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/socket_timeout"
                style="@style/SettingsHeading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/socketTimeout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"/>

                <Button
                    android:id="@+id/btnSocketTimeoutReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/request_permissions"
                    style="@style/SettingsHeading" />

                <ToggleButton
                    android:id="@+id/btnAlwaysRequestPerm"
                    android:checked="false"
                    android:textOff="@string/no"
                    android:textOn="@string/yes"
                    style="@style/SettingsButton"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hide_notifications_pause"
                    style="@style/SettingsHeading"/>

                <ToggleButton
                    android:id="@+id/btnBackgroundOnPause"
                    android:checked="false"
                    android:textOff="@string/no"
                    android:textOn="@string/yes"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/drm_autorenew"
                    style="@style/SettingsHeading"/>

                <ToggleButton
                    android:id="@+id/btnAutorenewDrmLicenses"
                    android:checked="false"
                    android:textOff="@string/no"
                    android:textOn="@string/yes"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sdk_allowed_video_codec_hint"
                style="@style/SettingsHeading" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/sdkAllowedCodecs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sdk_allowed_video_codec_hint" />

                <Button
                    android:id="@+id/btnSdkAllowedCodecsReset"
                    android:text="@string/reset"
                    style="@style/SettingsButton" />

            </LinearLayout>

            <Button
                android:id="@+id/btnApply"
                android:text="@string/apply"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_extra_large"
                android:paddingRight="@dimen/padding_extra_large"
                android:textSize="18sp"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/padding_medium"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>